[squash] Fixes audio-only icon indicator

--- a/css/modals/video-quality/_video-quality.scss
+++ b/css/modals/video-quality/_video-quality.scss
@@ -126,6 +126,7 @@
 
     i {
         cursor: pointer;
+        line-height: $videoStateIndicatorSize;
     }
 
     /**
